--- a/python_santander1.ipynb
+++ b/python_santander1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSd0eGsuPCQA18U8mJjM+5",
+      "authorship_tag": "ABX9TyOghtq9a70oqjY07yaTcM5/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "id": "Ph1i3GMkBmz8",
         "outputId": "8c9bb8cc-4fad-4d14-c5f2-5e6bfdea0197"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "HZ99Lmz0_EvS"
       },
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "P_k-lYxGCUFT"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "g6Ws2L0bEa0W"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,7 +215,7 @@
       "metadata": {
         "id": "qpCVEFmiGJWF"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "O4ae3-HmG5YB"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
       "metadata": {
         "id": "_1tivOTaHqtB"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,8 +345,7 @@
         "       print (\"eres menor de edad.\")\n",
         "\n",
         "En este ejemplo, si la variable edad es mayor o igual a 18, se ejecutará el bloque de código dentro del if y se imprimirá el mensaje \"Eres mayor de edad.\" De lo contrario, se ejecutará el bloque de código dentro del else y se imprimirá el mensaje \"Eres menor de edad.\"\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "M4YYspruJiJy"
@@ -405,7 +404,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "While\n",
+        "#While\n",
         "\n",
         "El bucle while se utiliza para repetir un bloque de código mientras una condición sea verdadera. La sintaxis básica es la siguiente:\n",
         "\n",
@@ -430,7 +429,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Break\n",
+        "#Break\n",
         "\n",
         "La instrucción break se utiliza para salir prematuramente de un bucle, independientemente de la condición. Cuando se encuentra un break, el bucle se detiene y el flujo de ejecución continúa con la siguiente instrucción fuera del bucle.\n",
         "\n",
@@ -455,7 +454,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Continue\n",
+        "#Continue\n",
         "\n",
         "La instrucción continue se utiliza para saltar el resto del bloque de código dentro de un bucle y pasar a la siguiente iteración.\n",
         "\n",
@@ -468,8 +467,7 @@
         "    print(i)\n",
         "    \n",
         "En este ejemplo, el bucle for itera sobre los números del 0 al 9 utilizando la función range(). Dentro del bucle, se verifica si el número es divisible por 2 utilizando el operador de módulo %. Si el número es divisible por 2 (es decir, si es par), se ejecuta la instrucción continue, lo que hace que se salte el resto del bloque de código y se pase a la siguiente iteración del bucle. Como resultado, solo se imprimirán los números impares.\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "68SQAxUCNma_"
@@ -490,7 +488,7 @@
         "id": "7Ce_HPeWJGZP",
         "outputId": "34fa6b96-dc1e-452e-8c06-ed47f028f043"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -508,7 +506,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pass\n",
+        "#Pass\n",
         "\n",
         "La instrucción pass es una operación nula que no hace nada. Se utiliza como marcador de posición cuando se requiere una instrucción sintácticamente, pero no se desea realizar ninguna acción.\n",
         "\n",
@@ -522,6 +520,235 @@
       "metadata": {
         "id": "y7DEWHiDO-0A"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Listas\n",
+        "Una lista es una estructura de datos mutable y ordenada que permite almacenar una colección de elementos. Los elementos de una lista pueden ser de diferentes tipos de datos y se encierran entre corchetes [], separados por comas.\n",
+        "\n",
+        "\n",
+        "\n",
+        "#Creación y acceso\n",
+        "Para crear una lista, simplemente encierra los elementos entre corchetes:\n",
+        "\n",
+        "frutas = [\"manzana\", \"banana\", \"naranja\"]\n",
+        "\n",
+        "Para acceder a los elementos de una lista, utiliza el índice del elemento entre corchetes. Los índices comienzan desde 0.\n",
+        "\n",
+        "print(frutas[0])  # Imprime \"manzana\"\n",
+        "\n",
+        "print(frutas[1])  # Imprime \"banana\"\n",
+        "\n",
+        "print(frutas[2])  # Imprime \"naranja\"\n",
+        "\n",
+        "También puedes acceder a los elementos desde el final de la lista utilizando índices negativos. El índice -1 representa el último elemento, -2 representa el penúltimo, y así sucesivamente.\n",
+        "\n",
+        "print(frutas[-1])  # Imprime \"naranja\"\n",
+        "\n",
+        "print(frutas[-2])  # Imprime \"banana\"\n",
+        "\n",
+        "print(frutas[-3])  # Imprime \"manzana\"\n"
+      ],
+      "metadata": {
+        "id": "op8Lb954V3Og"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Métodos de listas\n",
+        "Las listas en Python tienen varios métodos incorporados que nos permiten manipular y modificar los elementos de la lista. Algunos métodos comunes son:\n",
+        "\n",
+        "append(elemento): agrega un elemento al final de la lista.\n",
+        "\n",
+        "insert(indice, elemento): inserta un elemento en una posición específica de la lista.\n",
+        "\n",
+        "remove(elemento): elimina la primera aparición de un elemento en la lista.\n",
+        "\n",
+        "pop(indice): elimina y devuelve el elemento en una posición específica de la lista.\n",
+        "\n",
+        "sort(): ordena los elementos de la lista en orden ascendente.\n",
+        "\n",
+        "reverse(): invierte el orden de los elementos en la lista.\n",
+        "\n",
+        "Ejemplo:"
+      ],
+      "metadata": {
+        "id": "9TzwQAMVWfLR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas = [\"manzana\",\"banana\",\"naranja\"]\n",
+        "frutas.append(\"pera\")\n",
+        "print(frutas)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EDtkz_-CWyyd",
+        "outputId": "0cf5cf7c-9308-4c8b-9ed6-55ee75a53137",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['manzana', 'banana', 'naranja', 'pera']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas.insert(1,\"uva\")\n",
+        "frutas"
+      ],
+      "metadata": {
+        "id": "aRkjxjJXYEFl",
+        "outputId": "af299991-fa79-43ff-e706-20eb9f67476a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['manzana', 'uva', 'uva', 'uva', 'banana', 'naranja', 'pera']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas.remove(\"uva\")"
+      ],
+      "metadata": {
+        "id": "bG2soYk1Yoyi"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas"
+      ],
+      "metadata": {
+        "id": "e7WNg4kdYzUu",
+        "outputId": "000357a2-81a9-48fa-ded4-7fc6112461a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['manzana', 'uva', 'banana', 'naranja', 'pera']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruta_eliminada = frutas.pop(2)"
+      ],
+      "metadata": {
+        "id": "_T5-4zacZJCj"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(fruta_eliminada)"
+      ],
+      "metadata": {
+        "id": "z7kBcoiwZZdO",
+        "outputId": "0284d00a-5ce9-4ae1-bb3a-0ae8be1898f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "banana\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas.sort()\n",
+        "print(frutas)"
+      ],
+      "metadata": {
+        "id": "45X5f-oEZud6",
+        "outputId": "8fb22684-192c-4e25-aaf9-4e3de0dff292",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['manzana', 'naranja', 'pera', 'uva']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "frutas.reverse()\n",
+        "print(frutas)"
+      ],
+      "metadata": {
+        "id": "J5BQLVjWaDIq",
+        "outputId": "7c698422-9db5-414e-a101-0ff8b797ad85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['uva', 'pera', 'naranja', 'manzana']\n"
+          ]
+        }
+      ]
     }
   ]
 }
